--- a/share/header_main.css
+++ b/share/header_main.css
@@ -1,4 +1,5 @@
 .navbar{
     background-color: #fff !important;
-    border-bottom: 2px soild #265CBF !important;
+    border-bottom: 2px solid #265CBF  !important;
+    margin-bottom: 0!important;
 }
