--- a/share/orderHistoryPhone.css
+++ b/share/orderHistoryPhone.css
@@ -42,7 +42,7 @@
   
   .my-custom-scrollbar {
     position: relative;
-    height: 200px;
+    height: 400px;
     overflow: auto;
     }
     .table-wrapper-scroll-y {
@@ -59,4 +59,52 @@
  
       
       /* Modal Content */
-    
+      .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      }
+      
+      /* Modal Content */
+      .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 60%;
+      }
+      
+      /* The Close Button */
+      .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+      }
+      
+      .close:hover,
+      .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+      }
+
+      .deleteButton{
+        display: flex;
+        text-align: center;
+        margin-top: 30px;
+      }
+      .deleteButton button{
+        width: 30%;
+     
+      }
+
+
